# dreamcast

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  configure.sh
apps/: bh.cpp  bh.pk3  cube.h  cube_ta.c  cube_ta_fullscreen.c  cube_ta_fullscreen_textured.c  cube_ta_fullscreen_textured.cpp  cube_ta_fullscreen_textured_punch_through.cpp  dc_map01_minimal.cpp  dc_map01_minimal.h  dreamcasko.cpp  dreamcasko.pk3  dreamcasko.pk3.h  font.cpp  interrupt.cpp  lbp.cpp  maple.c  maple2.c  md3.h  peggle.cpp  peggle.pk3  peggle.pk3.h  pvr.h  pvr_test1.cpp  romfs.c  romfs.h  rott.cpp  rott_wall1.64x64.palette_8bpp.twiddled  swept.cpp  tinyphysicsengine.h  trade-federation-ship.cpp  trade-federation-ship.pk3  trade-federation-ship.pk3.h
cmake/: toolchain.cmake
content/maps/: trade-federation-ship.bsp  trade-federation-ship.map
content/models/: dreamcasko.iqm  dreamcasko.md3
content/modelsrc/: dreamcasko.blend
content/textures/dev/: blue001a.PVR  blue001a.bak  blue001b.PVR  blue001b.bak  grey001a.PVR  grey001a.bak  grey002a.PVR  grey002a.bak  orange001a.PVR  orange001a.bak  orange002a.PVR  orange002a.bak  orange002b.PVR  orange002b.bak  red001a.PVR  red001a.bak  red001b.PVR  red001b.bak  ref_10.PVR  ref_10.bak  ref_10a.PVR  ref_10a.bak  ref_20.PVR  ref_20.bak  ref_20a.PVR  ref_20a.bak  ref_30.PVR  ref_30.bak  ref_30a.PVR  ref_30a.bak  ref_40.PVR  ref_40.bak  ref_40a.PVR  ref_40a.bak  ref_50.PVR  ref_50.bak  ref_50a.PVR  ref_50a.bak  ref_60.PVR  ref_60.bak  (+14 more)
content/textures/fonts/: ter-u12n.PVR
content/textures/models/dreamcasko/: body.PVR  clothing.PVR  face.PVR
content/textures/peggle/: ball.PVR  peg0a.PVR  peg0b.PVR  peg1a.PVR  peg1b.PVR
content/texturesrc/fonts/: ter-u12n.otb  ter-u12n.pbm
runtime/: camera.c  camera.h  font.h  ibsp.c  ibsp.h  ibsp_pmove.c  ibsp_pmove.h  ibsp_trace.c  ibsp_trace.h  interrupt.cpp  iqm.h  maple.cpp  maple.h  md3.h  memorymap.h  pvr.c  pvr.h  runtime.cpp  runtime.h  start.s  texture_cache.cpp  texture_cache.h  timer.cpp  timer.h  transfer.cpp  transfer.h  utils.c  utils.h
runtime/cglm/: cglm.h  common.h  mat4.h
runtime/holly/: holly.hpp
runtime/holly/core/: parameter_bits.hpp
runtime/linker/: addresses.lds
runtime/printf/: printf.c
runtime/sh7091/: c_serial.cpp  cache.cpp  cache.hpp  serial.cpp  serial.hpp  sh7091.hpp  store_queue_transfer.hpp
runtime/systembus/: systembus.hpp
runtime/tinyalloc/: tinyalloc.h
tools/ttf_bitmap/: README  ttf_bitmap.cpp
tools/zip2rom/: README  pak2rom.c  zip2rom.c  zip2rom2.c
